# smart-cache

./: .gitignore  .gitmodules  Cargo.toml  Pipfile  README.md  SECURITY.md  benchmark.py  cache_env.py  cache_env_async.py  cache_env_async_quick.py  cache_env_async_quick_set.py  cache_env_new.cpp  cache_env_new.py  cache_env_new_domain.cpp  cache_env_new_domain.py  cache_env_new_domain_eod.py  cache_env_new_linear.py  cacheenvnewcython.pyx  compile.sh  go.code-workspace  mellowmax_training.py  mellowmax_training_async.py  mellowmax_training_async_quick.py  mellowmax_training_async_quick_lowwatermark.py  mellowmax_training_async_quick_lowwatermark_set.py  model_architectures.py  pyproject.toml  requirements.txt  setup.py  setup_cache_env.py  test_dQL.py  test_frequency.sh  test_recency.sh  test_size.sh  training.py  training_new.py  training_new_cpp.py  training_new_cpp_domain.py  training_new_domain.py  training_new_domain_eod.py
DataAnalyzer/: __main__.py  loaders.py  utils.py
DataManager/: Pipfile  __init__.py  requirements.txt
Probe/: loaders.py  requirements.txt  setup.py  utils.py
SmartCache/: go.mod  go.sum
config/: testSCDL.yml
dQL/: __init__.py  stats.cpp
datasets/: .gitignore  README.md  add_hit_upper_bound.py  it_upper_bounds.json  us_upper_bounds.json
deepQlearning/: Untitled.ipynb  features.json  reward.csv  test_cache.py
featureMaps/: rlAdditionFeatureMap.json  rlEvictionFeatureMap.json
minio/: README.md  create_cert.sh  docker-compose.yml  example_put.py  sxample_put.py
qLearning_smartCache/: main.go
results/: .gitignore  README.md
(+1213 files in other folders)
