[tool.poetry]
name = "smart-cache"
version = "0.1.0"
description = "tools for smart cache development"
authors = ["MircoT <MircoT@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
bokeh = "^1.4"
tqdm = "^4.39"
yaspin = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
