[tool.poetry]
name = "smart-cache"
version = "0.1.0"
description = "tools for smart cache development"
authors = ["MircoT <MircoT@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
bokeh = "^1.4"
tqdm = "^4.39"
yaspin = "^0.15.0"
modin = "^0.7.3"
flask = "^1.1"
matplotlib = "^3.2"
plotly = "^4.8"
sklearn = "^0.0.0"
tabulate = "^0.8.7"
minio = "^5.0"
tensorflow = "^2.2"
coloredlogs = "^14.0"
colorama = "^0.4.3"
seaborn = "^0.10.1"
redis = "^3.5"
findspark = "^1.4"
graphviz = "^0.14.0"
python-dotenv = "^0.13.0"
dask = "^2.18"


[tool.poetry.dev-dependencies]
pylama = "^7.7"
autopep8 = "^1.5"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
